Refactor 小红书内容工作流: Update app.py for model configuration, enhance painter module with multi-mode support, and improve UI components for better user experience. Added new models and refined image/audio generation processes.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 streamlit
-openai
+openai>=1.0
 replicate
 oss2
 DrissionPage
 python-dotenv
 requests
 pandas
+moviepy
+edge-tts
+pydub
+google-genai>=1.0.0
+pillow
